// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden: Render v1 conformance cases → Responses API request render-user-image-input 1`] = `
{
  "body": {
    "include": [
      "reasoning.encrypted_content",
    ],
    "input": [
      {
        "content": [
          {
            "text": "What does this page show?",
            "type": "input_text",
          },
          {
            "detail": "auto",
            "image_url": "data:image/png;base64,iVBORw0KGgpmaXh0dXJlOiBsb2dpbiBwYWdlIHNjcmVlbnNob3Q=",
            "type": "input_image",
          },
        ],
        "role": "user",
      },
    ],
    "instructions": "You are a helpful agent.",
    "max_output_tokens": 1024,
    "model": "gpt-5.5",
    "reasoning": {
      "effort": "low",
    },
    "store": false,
    "stream": true,
    "tools": [
      {
        "description": "Read a file from the sandbox workspace.",
        "name": "read_file",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "path": {
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
    ],
  },
  "ok": true,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-screenshot-tool-result 1`] = `
{
  "body": {
    "include": [
      "reasoning.encrypted_content",
    ],
    "input": [
      {
        "content": [
          {
            "text": "Take a screenshot of the login page.",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
      {
        "arguments": "{}",
        "call_id": "call_1",
        "name": "screenshot",
        "type": "function_call",
      },
      {
        "call_id": "call_1",
        "output": [
          {
            "text": "Login page loaded.",
            "type": "input_text",
          },
          {
            "detail": "auto",
            "image_url": "data:image/png;base64,iVBORw0KGgpmaXh0dXJlOiBsb2dpbiBwYWdlIHNjcmVlbnNob3Q=",
            "type": "input_image",
          },
          {
            "text": "Cursor at (640, 400).",
            "type": "input_text",
          },
        ],
        "type": "function_call_output",
      },
    ],
    "instructions": "You are a helpful agent.",
    "max_output_tokens": 1024,
    "model": "gpt-5.5",
    "reasoning": {
      "effort": "low",
    },
    "store": false,
    "stream": true,
    "tools": [
      {
        "description": "Capture the sandbox desktop.",
        "name": "screenshot",
        "parameters": {
          "additionalProperties": false,
          "properties": {},
          "required": [],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
    ],
  },
  "ok": true,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-deferred-tool-loaded 1`] = `
{
  "body": {
    "include": [
      "reasoning.encrypted_content",
    ],
    "input": [
      {
        "content": [
          {
            "text": "File a bug about the login page.",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
      {
        "arguments": "{"query":"mcp__jira__create_issue"}",
        "call_id": "call_1",
        "name": "tool_search",
        "type": "function_call",
      },
      {
        "call_id": "call_1",
        "output": [
          {
            "text": "mcp__jira__create_issue: Create a Jira issue in a project.",
            "type": "input_text",
          },
        ],
        "type": "function_call_output",
      },
    ],
    "instructions": "You are a helpful agent.",
    "max_output_tokens": 1024,
    "model": "gpt-5.5",
    "reasoning": {
      "effort": "low",
    },
    "store": false,
    "stream": true,
    "tools": [
      {
        "description": 
"Load deferred tools so you can call them. Pass exact tool names, separated by commas, to load those tools; otherwise the query's words are matched against each deferred tool's name and description, and the best matches are loaded. A loaded tool stays available for the rest of the conversation.

Deferred tools (search to load): mcp__jira__create_issue"
,
        "name": "tool_search",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "limit": {
              "default": 5,
              "description": "How many keyword matches to load.",
              "maximum": 10,
              "minimum": 1,
              "type": "integer",
            },
            "query": {
              "description": "Exact tool names separated by commas, or keywords. At most 200 characters.",
              "minLength": 1,
              "type": "string",
            },
          },
          "required": [
            "query",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
      {
        "description": "Read a file from the sandbox workspace.",
        "name": "read_file",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "path": {
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
      {
        "description": 
"Create a Jira issue in a project.
Returns the new issue key."
,
        "name": "mcp__jira__create_issue",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "project": {
              "type": "string",
            },
            "summary": {
              "type": "string",
            },
          },
          "required": [
            "project",
            "summary",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
    ],
  },
  "ok": true,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-tool-results-cleared 1`] = `
{
  "body": {
    "include": [
      "reasoning.encrypted_content",
    ],
    "input": [
      {
        "content": [
          {
            "text": "What is in README.md?",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
      {
        "arguments": "{"path":"README.md"}",
        "call_id": "call_1",
        "name": "read_file",
        "type": "function_call",
      },
      {
        "call_id": "call_1",
        "output": [
          {
            "text": "[tool result cleared: call_id=call_1; read it with read_tool_result]",
            "type": "input_text",
          },
        ],
        "type": "function_call_output",
      },
      {
        "content": "README.md contains one heading: demo.",
        "role": "assistant",
      },
      {
        "content": [
          {
            "text": "And .env?",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
      {
        "arguments": "{"path":".env"}",
        "call_id": "call_2",
        "name": "read_file",
        "type": "function_call",
      },
      {
        "call_id": "call_2",
        "output": [
          {
            "text": 
"API_URL=https://api.example.test
TOKEN=[redacted]
"
,
            "type": "input_text",
          },
        ],
        "type": "function_call_output",
      },
      {
        "content": "It sets API_URL and TOKEN.",
        "role": "assistant",
      },
      {
        "content": [
          {
            "text": "Continue.",
            "type": "input_text",
          },
        ],
        "role": "user",
      },
    ],
    "instructions": "You are a helpful agent.",
    "max_output_tokens": 1024,
    "model": "gpt-5.5",
    "reasoning": {
      "effort": "low",
    },
    "store": false,
    "stream": true,
    "tools": [
      {
        "description": "Read a file from the sandbox workspace.",
        "name": "read_file",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "path": {
              "type": "string",
            },
          },
          "required": [
            "path",
          ],
          "type": "object",
        },
        "strict": false,
        "type": "function",
      },
    ],
  },
  "ok": true,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-thinking-block-replay 1`] = `
{
  "code": "continuation_unsupported",
  "message": "a scripted thinking part can't be sent to openai",
  "ok": false,
}
`;

exports[`golden: Render v1 conformance cases → Responses API request render-hosted-search-citations 1`] = `
{
  "code": "continuation_unsupported",
  "message": "a scripted server_tool part can't be sent to openai",
  "ok": false,
}
`;
